* Console:       - Add a little color to confignav       - Remove 'no skew' indication
Monotone-Parent: 49d65bf23d30dd98c110c94a1dc4944f999afab5
Monotone-Revision: 29633507c6112f11a280c65c606b8985fd68d268

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-20T22:50:14

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -87,3 +87,11 @@ div.news {
 	text-align: left;
 	color: inherit;
 }
+
+div.confignav {
+	background-color: #efefff;
+}
+
+div.configure {
+	background-color: #ffffc0;
+}
