* Console:       - Use CSS for form messages       - Goodbye nonce spoof message       - tunnels.jsp improvements
Monotone-Parent: dc817d70812b80e35a7c37eaa881e4b866435838
Monotone-Revision: 3957e2a837cffcbb7e8fb20d527bffc8a23f0465

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-05-26T20:04:20

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -89,9 +89,24 @@ div.news {
 }
 
 div.confignav {
+	padding: 1em;
 	background-color: #efefff;
 }
 
 div.configure {
+	padding: 1em;
 	background-color: #ffffc0;
+}
+
+div.messages {
+	padding: 1em;
+	background-color: #fafaff;
+}
+
+div.messages span.error {
+	color: #d00000;
+}
+
+div.messages span.notice {
+	font-style: italic;
 }
