Tweaks to dark router console css.
Monotone-Parent: f898cf00fde99785641d4b34fe6ac8fc6970e61e
Monotone-Revision: 87a6fed8cedb8775a7266bed0f68921cf36c297c

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-07T01:24:53
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -249,8 +249,18 @@ table {
 	li {
 	text-align: left;
 	list-style-type:square;
-	margin: 2px 20px 0px 30px;
+	margin: 4px 0px 4px 30px;
 	padding: 1px 20px 1px 0px;
+	border-right: 4px solid #117;
+	-moz-border-radius: 10px;
+	}
+
+	li:nth-child(even){
+	text-align: left;
+	list-style-type:square;
+	margin: 4px 0px 4px 30px;
+	padding: 1px 20px 1px 0px;
+	border-right: 4px solid #339;
 	}
 	
 	ol {
@@ -433,11 +443,12 @@ select {
 textarea {
  background-color: #001;
  color: #eef;
-	padding: 5px;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-	font-family: "Lucida Console", Courier, mono;
+ padding: 5px;
+ margin: 5px 0;
+ border-radius: 4px;
+ -moz-border-radius: 4px;
+ -webkit-border-radius: 4px;	
+ font-family: "Lucida Console", Courier, mono;
 }
 
 form {
