--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -113,7 +113,7 @@ div.warning {
 }
 
 div.main {
-	margin: 0px 0px 20px 215px;
+	margin: 0px 0px 20px 220px;
 	padding: 0 15px 15px 25px;
 	background-color: #fff;
 	text-align: left;
@@ -127,7 +127,7 @@ color: #003;
 background-color: #003;
 height: 1px;
 border: 0px solid #003;
-margin: 5px 0;
+margin: 10px 0;
 }
 
 div.main textarea {
@@ -135,7 +135,7 @@ div.main textarea {
 }
 
 div.news {
-	margin: 0px 15px 20px 240px;
+	margin: 0px 15px 20px 245px;
 	padding: 20px 30px 20px 30px;
 	border: 1px solid #003;
   background-color: #ffeeaa;
@@ -148,7 +148,7 @@ div.news {
 
 div.confignav {
 	padding: 10px;
-	margin: 0 0px 20px 0;
+	margin: 0 0px 25px 0;
 	background-color: #ddddff;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -158,7 +158,7 @@ div.confignav {
 
 div.configure {
 	padding: 1em;
-	margin: 10px 0px;
+	margin: 10px 0px 25px 0;
 	background-color: #ddf;
 	-moz-border-radius: 4px;
 	border: 1px solid #000022;
@@ -218,7 +218,7 @@ tr:nth-child(even) {
   }	
    
 	td {
-	padding: 2px;
+	padding: 5px;
 	color: black;
 	/*background-color: #ffc;*/
 	text-align: left;
@@ -278,9 +278,9 @@ h1 {
 	text-align: left;
 	color: #000022;
 	padding: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 	margin-top: 0px;
-	margin-left: 240px;
+	margin-left: 245px;
 	margin-right: 15px;
 	font-size: 16pt;
 	font-weight: bold;
@@ -413,6 +413,7 @@ select {
 
 textarea {
  padding: 5px;
+ margin: 5px 0;
  background-color: #eef;
  color: #003;
 	border-radius: 4px;
