--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -221,7 +221,7 @@ table {
 	font-size: 8pt;
 	background-color: #004;
 	background-image:url('images/tabletitledark.png');
-	background-repeat:repeat-x;
+	/*background-repeat:repeat-x;*/
 	}
 	
 	tr:nth-child(even)
@@ -249,18 +249,8 @@ table {
 	li {
 	text-align: left;
 	list-style-type:square;
-	margin: 4px 0px 4px 30px;
+	margin: 2px 20px 0px 30px;
 	padding: 1px 20px 1px 0px;
-	border-right: 4px solid #117;
-	-moz-border-radius: 10px;
-	}
-
-	li:nth-child(even){
-	text-align: left;
-	list-style-type:square;
-	margin: 4px 0px 4px 30px;
-	padding: 1px 20px 1px 0px;
-	border-right: 4px solid #339;
 	}
 	
 	ol {
@@ -301,10 +291,8 @@ h1 {
 	text-align: left;
 	color: #bbf;
 	padding: 10px;
-	margin-left: 240px;
 	margin-bottom: 20px;
 	margin-top: 0px;
-	margin-right: 15px;
 	font-size: 16pt;
 	font-weight: bold;
 	font-style: normal;
@@ -318,7 +306,7 @@ h1 {
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;	
-	background-image:url('images/darkbluebg.png');
+	background-image:url('images/h1bg.png');
 	background-repeat:repeat-x;
 }
 
@@ -344,7 +332,7 @@ h2 a:hover {
 
 button { 
 border: 1px outset #ddddc0;
-padding: 0px 3px 1px 3px;
+padding: 0px 2px 1px 2px;
 /*line-height: 250%;*/
 background-color: #bbf;
 text-decoration: none;
@@ -353,7 +341,7 @@ text-decoration: none;
 	-webkit-border-radius: 4px;	
 font-size: 8pt;
 font-weight: bold;
-margin: 2px 3px;
+margin: 5px 5px 5px 0;
 text-align: center;
 }
 
@@ -443,12 +431,11 @@ select {
 textarea {
  background-color: #001;
  color: #eef;
- padding: 5px;
- margin: 5px 0;
- border-radius: 4px;
- -moz-border-radius: 4px;
- -webkit-border-radius: 4px;	
- font-family: "Lucida Console", Courier, mono;
+	padding: 5px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;	
+	font-family: "Lucida Console", Courier, mono;
 }
 
 form {
