Light theme update, bg textures for I2PTunnel config page.
Monotone-Parent: aaa2a22664239be8964a26a04301b886eec844bd
Monotone-Revision: 99a725f482a29e220fcf6bc45785088cccf47f61

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-08T09:59:51
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -168,6 +168,7 @@ div.messages {
 	padding: 0 10px 0 15px;
 	margin: 10px 0 20px 0;	
 	background-color: #ddf;
+	background: url(images/tabletile_alt.png);
 	-moz-border-radius: 4px;
 	border: 1px solid #000033;
 	text-size: 9pt;
