Tweak button css to ensure visited links don't change color (IE-fix).
Monotone-Parent: 99a725f482a29e220fcf6bc45785088cccf47f61
Monotone-Revision: 9c12dbcf703e0b05a3d18abb452591a248cca9dc

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-08T10:10:03
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -179,6 +179,10 @@ color:#ff6600
     border : 2px inset;
 }
 
+.control:visited {
+    color: #001;
+}
+
 .panel {
     width : 760px;
     margin : 16px auto 16px auto;
