Minor futzing with the dark console theme.
Monotone-Parent: e2b7d6fa97cdd0b8caf07ce32a23d05d5aa53199
Monotone-Revision: 4e52d22d590e48d61a4194b358284e1b31583af0

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-09T18:57:58
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -152,7 +152,7 @@ div.news {
 	background: url(images/darkbluetile.png);
 }
 
-div.news li\ {
+div.news li {
 	text-align: left;
 	list-style-type:square;
 	margin: 2px 20px 0px 30px;
@@ -301,7 +301,7 @@ text-align: justify;
 
 h1 {
 	text-align: left;
-	color: #bbf;
+	color: #ddf;
 	padding: 10px;
 	margin-left: 240px;
 	margin-bottom: 20px;
@@ -312,10 +312,10 @@ h1 {
 	font-style: normal;
 	text-transform: uppercase;
 	letter-spacing: 0.06em;
-	text-shadow: 0px 0px 1px rgba(0, 0, 120, 0.9);
+	text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
   white-space: normal; 
 	background-color: #004;
- /* -moz-box-shadow: 0 2px 2px 1px #ccccff; */
+  -moz-box-shadow: inset 0px 0px 16px 0px #009; 
 	border: 1px solid #99f;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
