Dark console theme tweaks.
Monotone-Parent: 3927ae4c759273222561b5a440ff369399ff3785
Monotone-Revision: 6e64ca6544771ae476de678623eccad8e50319eb

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-10T14:44:38
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -56,8 +56,9 @@ line-height: 250%;
 background-color: #bbf;
 text-decoration: none;
 	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;        
 color: #002;
 }
 
@@ -86,19 +87,18 @@ div.routersummaryouter {
 }
 
 div.routersummary {
-/*	margin: 0px 20px 20px 0px; */
 	width: 175px;
 	padding: 10px;
 	text-align: center;
 	border: 1px solid #9999ff;
-/*	border-left: 0px; */
 	background-color: #000033;
 	background: url(images/darkbluebg.png);
 	color: #eeeeff;
 	font-size: 8pt;
 	clear: left; /* fixes a bug in Opera */
-	-moz-border-radius: 4px 4px 4px 4px;
-	-webkit-border-radius: 4px 4px 4px 4px; 
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;        
 	float: left;
   -moz-box-shadow: inset 0px 0px 16px 0px #009; 
 }
@@ -301,7 +301,7 @@ text-align: justify;
 
 h1 {
 	text-align: left;
-	color: #ddf;
+	color: #bbf;
 	padding: 10px;
 	margin-left: 240px;
 	margin-bottom: 20px;
