I2PTunnels updates to dark theme, start of enhancements to "service not found" dialogs.
Monotone-Parent: f232d5bc50d8723d65c9fcb1092ebcb8333a83e4
Monotone-Revision: b92720c3b13440af7ebb6512b943b134cfeb81d1

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-11T03:35:39
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/console.css
+++ b/installer/resources/themes/console/console.css
@@ -29,16 +29,18 @@ div.logo {
 	margin: 0em;
 	padding: .5em;
 	text-align: center;
+	display: none !important;
 }
 
 div.toolbar {
 	margin: 0em 0em 2em 0em;
 	font-weight: bold;
+	display: none !important;
 }
 
 div.routersummaryouter {
 	float: left;
-	width: 215px;
+	width: 200px;
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -48,7 +50,7 @@ div.routersummaryouter {
 
 div.routersummary {
 	background-color: #fafaff;
-	width: 195px;
+	width: 175px;
 	color: inherit;
 	margin: 0em;
 	padding: 5px;
@@ -109,4 +111,8 @@ div.messages span.error {
 
 div.messages span.notice {
 	font-style: italic;
+}
+
+h1 {
+font-size: 16pt;
 }
