--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -23,7 +23,7 @@ div {
 }
 
 h4, label {
-    margin :   0px;
+    margin :   0;
     padding :  4px 2px 2px 0px;
     float :   left;
     width :  150px;
@@ -99,6 +99,7 @@ div.statusNotRunning {
     overflow : hidden;
 	color : #dd0000;
     padding-top: 24px;
+    margin-top: 6px;
     background: url('images/console_status_stopped.png') 0 0 no-repeat;
 }
 div.statusRunning {
@@ -108,6 +109,7 @@ div.statusRunning {
     overflow : hidden;
 	color : #00dd00;
     padding-top: 24px;
+    margin-top: 6px;
     background: url('images/console_status_running.png') 0 0 no-repeat;
 }
 div.statusStarting {
@@ -117,6 +119,7 @@ div.statusStarting {
     overflow : hidden;
 	color : #339933;
     padding-top: 24px;
+    margin-top: 6px;
     background: url('images/console_status_starting.png') 0 0 no-repeat;
 }
 
@@ -148,7 +151,7 @@ hr {
 }
 
 .control {
-    margin :  0 4px 0 0;
+    margin :  0 4px 0 4px;
     padding : 0 0 2px 0;
     overflow : hidden;
     height : 20px; 
@@ -162,6 +165,7 @@ hr {
     -moz-border-radius: 4px 4px 4px 4px;
 		border 1px solid #000022;
 		font-weight: bold;
+    margin-top: 8px;
 }
 
 .control:link {
@@ -184,7 +188,7 @@ color:#ff6600
 }
 
 .panel {
-    width : 760px;
+    width : 800px;
     margin : 16px auto 16px auto;
     overflow : hidden;
 	  text-align : left;
@@ -239,7 +243,7 @@ color:#ff6600
 }
 
 .header {
-	  -moz-border-radius: 4px 4px 4px 4px;
+	  -moz-border-radius: 4px;
 		border 1px solid #ff0000;
 }
 
@@ -275,7 +279,7 @@ text-decoration: none;
 select {
  background-color: #001;
  color: #eef;
-margin: 0 2px 0 2px;
+margin: 8px 2px 0 2px;
  font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
  border: 1px solid #99f;
 }
